Add initial implementation of slider

--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-helmet": "^6.1.0"
+    "react-helmet": "^6.1.0",
+    "react-slick": "^0.27.10",
+    "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
     "gh-pages": "^3.1.0",
