--- a/package.json
+++ b/package.json
@@ -22,8 +22,17 @@
     "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^4.1.0",
+    "@typescript-eslint/parser": "^4.1.0",
+    "eslint": "^7.8.1",
+    "eslint-config-airbnb": "^18.2.0",
+    "eslint-plugin-import": "^2.22.0",
+    "eslint-plugin-jsx-a11y": "^6.3.1",
+    "eslint-plugin-react": "^7.20.6",
+    "eslint-plugin-react-hooks": "^4.1.1",
     "gh-pages": "^3.1.0",
-    "prettier": "2.0.5"
+    "prettier": "2.0.5",
+    "typescript": "^4.0.2"
   },
   "keywords": [
     "gatsby"
