--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -27,6 +27,7 @@
         "react/jsx-filename-extension": [1, { "extensions": [".tsx", ".ts"] }],
         "max-len": [2, 130, 4], 
         "no-use-before-define": [0],
-        "@typescript-eslint/no-use-before-define": [1]
+        "@typescript-eslint/no-use-before-define": [1],
+        "react/require-default-props": "off"
     }
 }
